--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 00:05:03 2018</p>
+         Last Run: Mon Oct 29 01:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -31,36 +31,36 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>3</td>
-                        <td>0</td>
+                        <td>4</td>
                         <td>1</td>
-                        <td>51</td>
+                        <td>1</td>
+                        <td>49</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>21</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>2</td>
-                        <td>-1</td>
+                        <td>3</td>
+                        <td>0</td>
                         <td>1</td>
-                        <td>55</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>20</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
+                        <td>2</td>
+                        <td>-1</td>
                         <td>1</td>
-                        <td>-2</td>
-                        <td>1</td>
-                        <td>58</td>
+                        <td>54</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>W</td>
                         <td>18</td>
                      </tr>
@@ -89,9 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "1",
                  "0",
-                 "-1",
-                 "-2"
+                 "-1"
                ]
              },
              {
@@ -101,9 +101,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "4",
                  "3",
-                 "2",
-                 "1"
+                 "2"
                ]
              }
            ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "55",
-                 "58"
+                 "49",
+                 "53",
+                 "54"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
-                 "20",
+                 "23",
+                 "22",
                  "18"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 00:05:03 2018</p>
+         Last Run: Mon Oct 29 01:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Overcast</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>20</td>
+                        <td>21</td>
                         <td>90</td>
                         <td>0</td>
                         <td>10</td>
@@ -260,7 +260,7 @@
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>18</td>
+                        <td>19</td>
                         <td>80</td>
                         <td>0</td>
                         <td>11</td>
@@ -272,12 +272,12 @@
                         <td>Overcast</td>
                         <td>2</td>
                         <td>-1</td>
-                        <td>8</td>
-                        <td>69</td>
+                        <td>4</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>89</td>
+                        <td>88</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "20",
-                 "18",
-                 "8"
+                 "21",
+                 "19",
+                 "4"
                ]
              },
              {
@@ -388,7 +388,7 @@
                "data":[
                  "90",
                  "80",
-                 "69"
+                 "71"
                ]
              },
              {
@@ -399,7 +399,7 @@
                "data":[
                  "89",
                  "89",
-                 "89"
+                 "88"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 00:05:03 2018</p>
+         Last Run: Mon Oct 29 01:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>3</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>58</td>
+                        <td>6</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SSW</td>
-                        <td>66</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>4</td>
-                        <td>1</td>
-                        <td>10</td>
-                        <td>56</td>
+                        <td>Partly Cloudy</td>
+                        <td>5</td>
+                        <td>2</td>
+                        <td>6</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SSW</td>
-                        <td>66</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>16</td>
-                        <td>53</td>
+                        <td>8</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>11</td>
                         <td>S</td>
-                        <td>66</td>
+                        <td>57</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "0",
-                 "1",
+                 "2",
                  "4"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "3",
-                 "4",
+                 "5",
                  "6"
                ]
              }
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "10",
-                 "10",
-                 "16"
+                 "6",
+                 "6",
+                 "8"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
-                 "56",
-                 "53"
+                 "59",
+                 "57",
+                 "54"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "66",
-                 "66",
-                 "66"
+                 "59",
+                 "58",
+                 "57"
                ]
              }
            ]
