--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 02:05:03 2018</p>
+         Last Run: Mon Oct 29 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 02:05:03 2018</p>
+         Last Run: Mon Oct 29 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -245,27 +245,27 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>21</td>
-                        <td>90</td>
+                        <td>12</td>
+                        <td>91</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WNW</td>
-                        <td>89</td>
+                        <td>WSW</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>19</td>
-                        <td>80</td>
-                        <td>0</td>
                         <td>11</td>
-                        <td>WNW</td>
-                        <td>89</td>
+                        <td>79</td>
+                        <td>1</td>
+                        <td>11</td>
+                        <td>WSW</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -274,10 +274,10 @@
                         <td>-1</td>
                         <td>4</td>
                         <td>71</td>
-                        <td>0</td>
+                        <td>1</td>
                         <td>11</td>
-                        <td>WNW</td>
-                        <td>88</td>
+                        <td>WSW</td>
+                        <td>80</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,8 +375,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "21",
-                 "19",
+                 "12",
+                 "11",
                  "4"
                ]
              },
@@ -386,8 +386,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "90",
-                 "80",
+                 "91",
+                 "79",
                  "71"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "89",
-                 "89",
-                 "88"
+                 "64",
+                 "74",
+                 "80"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 02:05:03 2018</p>
+         Last Run: Mon Oct 29 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Overcast</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>3</td>
-                        <td>57</td>
+                        <td>4</td>
+                        <td>58</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SW</td>
-                        <td>59</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>5</td>
-                        <td>2</td>
-                        <td>3</td>
-                        <td>55</td>
-                        <td>1</td>
-                        <td>11</td>
-                        <td>SW</td>
-                        <td>58</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Overcast</td>
                         <td>6</td>
                         <td>4</td>
                         <td>4</td>
-                        <td>53</td>
+                        <td>55</td>
+                        <td>1</td>
+                        <td>11</td>
+                        <td>WSW</td>
+                        <td>80</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>6</td>
+                        <td>4</td>
+                        <td>5</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>57</td>
+                        <td>WSW</td>
+                        <td>79</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "1",
-                 "2",
+                 "4",
                  "4"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "4",
-                 "5",
+                 "6",
                  "6"
                ]
              }
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
-                 "4"
+                 "4",
+                 "4",
+                 "5"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
+                 "58",
                  "55",
-                 "53"
+                 "54"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "59",
-                 "58",
-                 "57"
+                 "81",
+                 "80",
+                 "79"
                ]
              }
            ]
