--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 03:05:03 2018</p>
+         Last Run: Mon Oct 29 06:30:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>4</td>
                         <td>1</td>
                         <td>0</td>
                         <td>48</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>21</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>3</td>
                         <td>0</td>
                         <td>1</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>21</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>16</td>
+                        <td>32</td>
                      </tr>
                   </tbody>
                </table>
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "48",
-                 "52",
-                 "54"
+                 "51",
+                 "53"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
-                 "21",
-                 "16"
+                 "38",
+                 "33",
+                 "32"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 03:05:03 2018</p>
+         Last Run: Mon Oct 29 06:30:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -245,15 +245,15 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>12</td>
-                        <td>91</td>
+                        <td>13</td>
+                        <td>90</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WSW</td>
-                        <td>64</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -263,21 +263,21 @@
                         <td>11</td>
                         <td>79</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>74</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>2</td>
                         <td>-1</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>71</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>80</td>
+                        <td>70</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "12",
+                 "13",
                  "11",
-                 "4"
+                 "5"
                ]
              },
              {
@@ -386,7 +386,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "91",
+                 "90",
                  "79",
                  "71"
                ]
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "64",
-                 "74",
-                 "80"
+                 "52",
+                 "62",
+                 "70"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 03:05:03 2018</p>
+         Last Run: Mon Oct 29 06:30:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>4</td>
                         <td>1</td>
                         <td>4</td>
-                        <td>58</td>
+                        <td>60</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SW</td>
-                        <td>81</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>6</td>
                         <td>4</td>
+                        <td>1</td>
                         <td>4</td>
-                        <td>55</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>80</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>6</td>
-                        <td>4</td>
+                        <td>Overcast</td>
                         <td>5</td>
-                        <td>54</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>10</td>
-                        <td>WSW</td>
-                        <td>79</td>
+                        <td>58</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>W</td>
+                        <td>88</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,8 +520,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "1",
-                 "4",
-                 "4"
+                 "1",
+                 "2"
                ]
              },
              {
@@ -532,8 +532,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "4",
-                 "6",
-                 "6"
+                 "4",
+                 "5"
                ]
              }
            ]
@@ -592,7 +592,7 @@
                "data":[
                  "4",
                  "4",
-                 "5"
+                 "10"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
-                 "55",
-                 "54"
+                 "60",
+                 "59",
+                 "58"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "81",
-                 "80",
-                 "79"
+                 "78",
+                 "84",
+                 "88"
                ]
              }
            ]
