--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 07:05:05 2018</p>
+         Last Run: Mon Oct 29 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>4</td>
                         <td>1</td>
                         <td>0</td>
-                        <td>48</td>
+                        <td>47</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>38</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>33</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>32</td>
+                        <td>34</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "48",
+                 "47",
                  "51",
                  "53"
                ]
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "38",
-                 "33",
-                 "32"
+                 "37",
+                 "35",
+                 "34"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 07:05:05 2018</p>
+         Last Run: Mon Oct 29 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -246,26 +246,26 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>13</td>
-                        <td>90</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>8</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>52</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>11</td>
-                        <td>79</td>
+                        <td>7</td>
+                        <td>77</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WSW</td>
-                        <td>62</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>5</td>
-                        <td>71</td>
+                        <td>68</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>70</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
+                 "-3",
                  "-2",
                  "-1"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-1",
+                 "0",
                  "1",
                  "2"
                ]
@@ -375,8 +375,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "13",
-                 "11",
+                 "8",
+                 "7",
                  "5"
                ]
              },
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "90",
-                 "79",
-                 "71"
+                 "87",
+                 "77",
+                 "68"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
-                 "62",
-                 "70"
+                 "50",
+                 "60",
+                 "68"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Oct 29 07:05:05 2018</p>
+         Last Run: Mon Oct 29 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -460,27 +460,27 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>4</td>
-                        <td>60</td>
+                        <td>7</td>
+                        <td>59</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SW</td>
-                        <td>78</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>4</td>
+                        <td>5</td>
+                        <td>2</td>
+                        <td>7</td>
+                        <td>58</td>
                         <td>1</td>
-                        <td>4</td>
-                        <td>59</td>
-                        <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>WSW</td>
-                        <td>84</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>5</td>
                         <td>2</td>
                         <td>10</td>
-                        <td>58</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>88</td>
+                        <td>89</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "1",
-                 "1",
+                 "2",
                  "2"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "4",
-                 "4",
+                 "5",
                  "5"
                ]
              }
@@ -590,8 +590,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
+                 "7",
+                 "7",
                  "10"
                ]
              },
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "60",
                  "59",
-                 "58"
+                 "58",
+                 "57"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
-                 "84",
-                 "88"
+                 "80",
+                 "85",
+                 "89"
                ]
              }
            ]
